(#) Sub-subcategories not visible in category views (Issue #1685)

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -290,12 +290,6 @@ body.modal-open {
 	}
 
 	//set the button's text color back to white (good guess)
-	a.btn:hover,
-	a.btn:focus,
-	a.btn.focus,
-	a.btn:active,
-	a.btn.active,
-	.open > .dropdown-toggle.btn,
 	a.btn-info,
 	a.btn-warning,
 	a.btn-danger,
